Fix horinzotal overflow in guide list

--- a/src/components/GuideList/styles.module.scss
+++ b/src/components/GuideList/styles.module.scss
@@ -59,10 +59,6 @@
 }
 
 @include breakpoint(xsmall) {
-  .guides-wrapper {
-    display: block;
-  }
-
   .article {
     width: 100%;
     margin: 0 0 _size(element-margin) 0 !important;
